Update the website

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,4 @@
-book_filename: "a-compendium-of-statistics-questions"
+book_filename: "which-stats-method"
 language:
   ui:
     chapter_name: "Chapter "
