--- a/_output.yml
+++ b/_output.yml
@@ -3,7 +3,7 @@ bookdown::pdf_book:
     in_header: preamble.tex
   latex_engine: xelatex
   citation_package: natbib
-  keep_tex: yes
+  keep_tex: no
 bookdown::epub_book: default
 bookdown::gitbook:
   css: style.css
